{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 26,
  "lineage": "c184fb4f-6a00-cd18-21a1-5578e66fbfaa",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f801569afb56f56e",
            "domain": "vpc",
            "id": "eipalloc-0f801569afb56f56e",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-198-209-35.compute-1.amazonaws.com",
            "public_ip": "34.198.209.35",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jump_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0557a15b87f6559cf",
            "arn": "arn:aws:ec2:us-east-1:957024231696:instance/i-0dfbca64b8b9de7a4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dfbca64b8b9de7a4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "ansible-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0066adfd7b601eaaf",
            "private_dns": "ip-10-0-2-157.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.157",
            "public_ip": "54.237.175.231",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01ed1ec0383faeb8c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ef5ce47815d46325",
            "tags": {
              "Name": "jumphost"
            },
            "tags_all": {
              "Name": "jumphost"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ff32973f3fe1c70e"
            ]
          },
          "dependencies": [
            "aws_security_group.public_sg",
            "aws_subnet.public-az2",
            "aws_vpc.ansible_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private-vm-az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0557a15b87f6559cf",
            "arn": "arn:aws:ec2:us-east-1:957024231696:instance/i-0b71c60be086364d0",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b71c60be086364d0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "ansible-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06dd69f70ecbdf7ce",
            "private_dns": "ip-10-0-1-204.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.204",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0204e5baeb5b629f1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0708b01f85e4d304b",
            "tags": {
              "Name": "nexus-vm"
            },
            "tags_all": {
              "Name": "nexus-vm"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ff32973f3fe1c70e"
            ]
          },
          "dependencies": [
            "aws_security_group.public_sg",
            "aws_subnet.private-az1",
            "aws_vpc.ansible_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private-vm-az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0557a15b87f6559cf",
            "arn": "arn:aws:ec2:us-east-1:957024231696:instance/i-08ddaf22923dec872",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08ddaf22923dec872",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "ansible-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c017ca53fdfc58a1",
            "private_dns": "ip-10-0-3-18.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.18",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09332ff83cd6a0320",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e0463b055fea1639",
            "tags": {
              "Name": "sonarqube-vm"
            },
            "tags_all": {
              "Name": "sonarqube-vm"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ff32973f3fe1c70e"
            ]
          },
          "dependencies": [
            "aws_security_group.public_sg",
            "aws_subnet.private-az2",
            "aws_vpc.ansible_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ansible_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:957024231696:internet-gateway/igw-01625797878129562",
            "id": "igw-01625797878129562",
            "owner_id": "957024231696",
            "tags": {
              "Name": "ansible-igw"
            },
            "tags_all": {
              "Name": "ansible-igw"
            },
            "vpc_id": "vpc-0f0b0ec1f77f07e32"
          },
          "dependencies": [
            "aws_vpc.ansible_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ansible_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:957024231696:loadbalancer/app/ansible-lb/0841a9c4f37f80b4",
            "arn_suffix": "app/ansible-lb/0841a9c4f37f80b4",
            "desync_mitigation_mode": "defensive",
            "dns_name": "ansible-lb-1576451559.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:957024231696:loadbalancer/app/ansible-lb/0841a9c4f37f80b4",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ansible-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0ff32973f3fe1c70e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0ba28799f61f58dba"
              },
              {
                "subnet_id": "subnet-0ef5ce47815d46325"
              }
            ],
            "subnets": [
              "subnet-0ba28799f61f58dba",
              "subnet-0ef5ce47815d46325"
            ],
            "tags": {
              "Name": "ansible-lb"
            },
            "tags_all": {
              "Name": "ansible-lb"
            },
            "vpc_id": "vpc-0f0b0ec1f77f07e32",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.public_sg",
            "aws_subnet.public-az1",
            "aws_subnet.public-az2",
            "aws_vpc.ansible_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:957024231696:listener/app/ansible-lb/0841a9c4f37f80b4/129409a43876506f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:957024231696:targetgroup/targetGroup1/1ad1d8797a217095",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:957024231696:listener/app/ansible-lb/0841a9c4f37f80b4/129409a43876506f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:957024231696:loadbalancer/app/ansible-lb/0841a9c4f37f80b4",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ansible_lb",
            "aws_lb_target_group.ansible_tg",
            "aws_security_group.public_sg",
            "aws_subnet.public-az1",
            "aws_subnet.public-az2",
            "aws_vpc.ansible_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ansible_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:957024231696:targetgroup/targetGroup1/1ad1d8797a217095",
            "arn_suffix": "targetgroup/targetGroup1/1ad1d8797a217095",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:957024231696:targetgroup/targetGroup1/1ad1d8797a217095",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "targetGroup1",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "ansible_tg"
            },
            "tags_all": {
              "Name": "ansible_tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0f0b0ec1f77f07e32"
          },
          "dependencies": [
            "aws_vpc.ansible_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attach-priv1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:957024231696:targetgroup/targetGroup1/1ad1d8797a217095-20230217174854121200000005",
            "port": 8081,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:957024231696:targetgroup/targetGroup1/1ad1d8797a217095",
            "target_id": "i-0b71c60be086364d0"
          },
          "dependencies": [
            "aws_instance.private-vm-az1",
            "aws_lb_target_group.ansible_tg",
            "aws_security_group.public_sg",
            "aws_subnet.private-az1",
            "aws_vpc.ansible_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attach-priv2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:957024231696:targetgroup/targetGroup1/1ad1d8797a217095-20230217174900813400000006",
            "port": 9000,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:957024231696:targetgroup/targetGroup1/1ad1d8797a217095",
            "target_id": "i-08ddaf22923dec872"
          },
          "dependencies": [
            "aws_instance.private-vm-az2",
            "aws_lb_target_group.ansible_tg",
            "aws_security_group.public_sg",
            "aws_subnet.private-az2",
            "aws_vpc.ansible_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ansible_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f801569afb56f56e",
            "connectivity_type": "public",
            "id": "nat-031317f564bf4b86a",
            "network_interface_id": "eni-0f365262004051cdf",
            "private_ip": "10.0.0.120",
            "public_ip": "34.198.209.35",
            "subnet_id": "subnet-0ba28799f61f58dba"
          },
          "dependencies": [
            "aws_eip.nat_ip",
            "aws_subnet.public-az1",
            "aws_vpc.ansible_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09ab1f1d144bf5e571080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-031317f564bf4b86a",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09ab1f1d144bf5e57",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_ip",
            "aws_nat_gateway.ansible_nat",
            "aws_route_table.private",
            "aws_subnet.public-az1",
            "aws_vpc.ansible_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01625797878129562",
            "id": "r-rtb-03418b6dd863d24571080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03418b6dd863d2457",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ansible_igw",
            "aws_route_table.public",
            "aws_vpc.ansible_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:957024231696:route-table/rtb-09ab1f1d144bf5e57",
            "id": "rtb-09ab1f1d144bf5e57",
            "owner_id": "957024231696",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f0b0ec1f77f07e32"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ansible_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:957024231696:route-table/rtb-03418b6dd863d2457",
            "id": "rtb-03418b6dd863d2457",
            "owner_id": "957024231696",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f0b0ec1f77f07e32"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ansible_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-047253e3cc6091512",
            "route_table_id": "rtb-09ab1f1d144bf5e57",
            "subnet_id": "subnet-0708b01f85e4d304b"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private-az1",
            "aws_vpc.ansible_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-080f89ad4afa78c66",
            "route_table_id": "rtb-09ab1f1d144bf5e57",
            "subnet_id": "subnet-0e0463b055fea1639"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private-az2",
            "aws_vpc.ansible_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c21e16967d46a336",
            "route_table_id": "rtb-03418b6dd863d2457",
            "subnet_id": "subnet-0ba28799f61f58dba"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public-az1",
            "aws_vpc.ansible_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07cdd889bb3762c8a",
            "route_table_id": "rtb-03418b6dd863d2457",
            "subnet_id": "subnet-0ef5ce47815d46325"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public-az2",
            "aws_vpc.ansible_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:957024231696:security-group/sg-0ff32973f3fe1c70e",
            "description": "Allow HTTP traffic from anywhere",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ff32973f3fe1c70e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              }
            ],
            "name": "pub-sec-group",
            "name_prefix": "",
            "owner_id": "957024231696",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "public-ansible-sg"
            },
            "tags_all": {
              "Name": "public-ansible-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f0b0ec1f77f07e32"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ansible_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:957024231696:subnet/subnet-0708b01f85e4d304b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0708b01f85e4d304b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "957024231696",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-az1"
            },
            "tags_all": {
              "Name": "private-az1"
            },
            "vpc_id": "vpc-0f0b0ec1f77f07e32"
          },
          "dependencies": [
            "aws_vpc.ansible_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:957024231696:subnet/subnet-0e0463b055fea1639",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e0463b055fea1639",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "957024231696",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bastion host"
            },
            "tags_all": {
              "Name": "bastion host"
            },
            "vpc_id": "vpc-0f0b0ec1f77f07e32"
          },
          "dependencies": [
            "aws_vpc.ansible_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:957024231696:subnet/subnet-0ba28799f61f58dba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ba28799f61f58dba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "957024231696",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bastion host"
            },
            "tags_all": {
              "Name": "bastion host"
            },
            "vpc_id": "vpc-0f0b0ec1f77f07e32"
          },
          "dependencies": [
            "aws_vpc.ansible_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:957024231696:subnet/subnet-0ef5ce47815d46325",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ef5ce47815d46325",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "957024231696",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "priv2"
            },
            "tags_all": {
              "Name": "priv2"
            },
            "vpc_id": "vpc-0f0b0ec1f77f07e32"
          },
          "dependencies": [
            "aws_vpc.ansible_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ansible_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:957024231696:vpc/vpc-0f0b0ec1f77f07e32",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06e1ff3dd045a1c15",
            "default_route_table_id": "rtb-0b4916ebae24fe76f",
            "default_security_group_id": "sg-014561fb641b11842",
            "dhcp_options_id": "dopt-0d01074006b2a4aa6",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f0b0ec1f77f07e32",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b4916ebae24fe76f",
            "owner_id": "957024231696"
          }
        }
      ]
    }
  ]
}